# lewdigital

./: README.md  example.js  package-lock.json  package.json  tailwind.config.js  vercel.json
components/: CustomLink.js  Layout.js  Post.js  TestComponent.js
pages/: [slug].js  _app.js  blog.js  index.js
pages/posts/: [slug].js
pages/projects/: [slug].js
posts/: _puzzle.mdx  _questions.mdx  aura.mdx  buttondown.mdx  chess.mdx  dash.mdx  hello-world copy 2.mdx  hello-world copy.mdx  hello-world.mdx  history.txt  lambda.mdx  map_plotting.mdx  noteform.mdx  pfpcaml.mdx  picocfd.mdx  prob.mdx  rugby.mdx  shell.mdx  whatgrad.mdx  willow.mdx
posts/shell/: Cargo.toml  cowsay  env.toml  history.txt
posts/shell/src/: builtins.rs  env.rs  foreground.rs  main.rs
styles/: globals.css  syntax.scss
utils/: animate.js  mdxUtils.js
