[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "*"
config = { version = "0.13.1", features = ["toml"] }
fake-tty = "0.3.1"
libc = "0.2.138"
atty = "0.2.14"
nix = "0.26.1"
